--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <!--<link rel="icon" href="../../../../favicon.ico">-->
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Growth Studio-Enjoy Create & Share</title>
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Carousel</a>
+        <a class="navbar-brand" href="#">Growth Studio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -170,8 +170,8 @@
 
       <!-- FOOTER -->
       <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p class="float-right"><a href="#">回到顶部</a></p>
+        <p>&copy;Growth Studio</p>
       </footer>
 
     </main>
